# Canva-Note

./: Cargo.toml  Readme.md
LICENSES/: SourceSans3-OFL-1.1.txt
canva-note/: Cargo.toml
canva-note/src/: app.rs  canvas.rs  commands.rs  document.rs  editor.rs  lib.rs  main.rs
