[package]
name = "canva-note"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
arboard = { version = "3.6.1", features = ["wayland-data-control"] }
clap = { version = "4.6.0", features = ["derive"] }
derive_more = { version = "2.1.1", features = ["from", "try_into"] }
dirs = "6.0.0"
eframe = "0.34.1"
egui = { version = "0.34.1", features = ["serde"] }
egui_commonmark = { version = "0.23.0", features = ["better_syntax_highlighting"] }
egui_extras = { version = "0.34.1", features = ["all_loaders"] }
image = { version = "0.25.8", default-features = false, features = ["png", "jpeg", "webp", "bmp", "gif"] }
log = "0.4.29"
postcard = { version = "1.1.3", features = ["alloc"] }
pretty_env_logger = "0.5.0"
serde = { version = "1.0.228", features = ["derive", "rc"] }
wl-clipboard-rs = "0.9.3"
